# pylokid

./: .drone.yml  .gitignore  Dockerfile  LICENSE  README.md  dashboard_client.py  dashboard_client.service  emailhandling.py  lodur.py  lodur_connect.py  main.py  mqtt.py  pdf_extract.py  pyproject.toml  requirements.txt  test_pdf_parsing.py  test_pdftotext.py  webdav.py
hack/patches/: mechsoup-browser-content-type.patch  mechsoup-link-regex.patch
pylokid/: __init__.py  __main__.py  main.py
