[tool.poetry]
name = "pylokid"
version = "3.0.2"
description = ""
authors = ["Tobias Brunner <tobias@tobru.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aioeasywebdav = "2.4.0"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
python-pushover = "^0.4"
MechanicalSoup = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pylokid = 'pylokid.main:main'
